examples/test/testpolicy14610.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14610
  namespace: namespace270
spec:
  podSelector:
    matchLabels:
      key6: value12
      key49: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value21
          key32: value48
          key24: value16
      podSelector:
        matchLabels:
          key1: value11
          key6: value24
          key16: value25
